# pineapple_pick_and_place

./: .gitignore  README.md
catkin_ws/: README.md  simple_demo.py
catkin_ws/src/apriltags_ros/apriltags_ros/launch/: cali_cam1_d435.launch  cali_cam1_zedm.launch  delta_board.launch
catkin_ws/src/arm_operation/: CMakeLists.txt
catkin_ws/src/arm_operation/data/: sace.txt  wp.txt
catkin_ws/src/arm_operation/launch/: demo.launch  ur5_sim.launch
catkin_ws/src/arm_operation/script/: ur_ik_solver.cpp
catkin_ws/src/arm_operation/src/: .cpp  get_picture.cpp  goto_pose.cpp
catkin_ws/src/dynamixel_motor/dynamixel_tutorials/launch/: controller_manager.launch
catkin_ws/src/grasp_suck/: CMakeLists.txt
catkin_ws/src/grasp_suck/launch/: simple_demo.launch
catkin_ws/src/hand_eye_calibration/data/: abcd.txt  arm0708.txt  arm0714.txt  arm0831.txt  calibration.txt
catkin_ws/src/hand_eye_calibration/src/: cali_remap.py  static_cam_calibration.cpp  test_calibration.cpp
catkin_ws/src/pose_estimation/: CMakeLists.txt
catkin_ws/src/pose_estimation/config/: pose_estimation.yaml
catkin_ws/src/pose_estimation/launch/: obj_clusters.launch
catkin_ws/src/pose_estimation/src/: conversion.hpp  ex.cpp  pointcloud_ClusterExtraction.cpp
catkin_ws/src/pose_estimation/srv/: get_pick_pose.srv
catkin_ws/src/task1_2/: CMakeLists.txt
catkin_ws/src/task1_2/launch/: master_task.launch  task1_2.launch
catkin_ws/src/task1_2/src/: task1_2_ros.py
catkin_ws/src/task1_2/srv/: task1out.srv
catkin_ws/src/vacuum_conveyor_control/src/: vacuum_and_conveyor_control.cpp
catkin_ws/src/visual_system/: CMakeLists.txt
catkin_ws/src/visual_system/launch/: tf.launch
catkin_ws/src/visual_system/src/: charuco.cpp  get_pose.cpp  pcd2pointcloud2.cpp  pixel_to_xyz.cpp  tf_pose.cpp
catkin_ws/src/visual_system/srv/: get_image.srv
catkin_ws/src/zed-ros-wrapper/zed_wrapper/params/: common.yaml
